# pykarambola

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  issue_dependency_tree.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  ci.yml  slack-notify.yml
benchmarks/: allen_cell_comparison.ipynb  invariants_classification.py
benchmarks/results/: ALLEN_CELL_CELLPROFILER_OPTIMIZED.md  ALLEN_CELL_COMBINATIONS_OPTIMIZED.md  ALLEN_CELL_EIGEN_BETA_ABLATION.md  ALLEN_CELL_EIGEN_COMBINATIONS_OPTIMIZED.md  ALLEN_CELL_EIGEN_ONLY_OPTIMIZED.md  ALLEN_CELL_INVARIANTS_SUMMARY.md  ALLEN_CELL_OPTIMIZED.md  ALLEN_CELL_PRELIMINARY.md  ALLEN_CELL_SO2_OPTIMIZED.md  ALLEN_CELL_SO2_PRELIMINARY.md  ALLEN_CELL_SO2_PRELIMINARY_PLAN.md  ALLEN_CELL_SO2_PRELIMINARY_RBF.md  ALLEN_CELL_SO3D3_EIGEN_OPTIMIZED.md  ALLEN_CELL_SO3D3_OPTIMIZED.md  ALLEN_CELL_SPHARM_SYSTEMATIC.md  BENCHMARK_SUMMARY.md  INVARIANT_ANALYSIS.md  adrenal3d_invariants_hyperparams.json  adrenal3d_invariants_scores.json
benchmarks/results/adrenal3d/: adrenal3d_invariants_scores.json
benchmarks/results/adrenal3d_64/: adrenal3d_64_invariants_hyperparams.json  adrenal3d_64_invariants_scores.json
benchmarks/results/allen_cell/: ALLEN_CELL_CELLPROFILER_ABLATION.md  ALLEN_CELL_EIGEN_BETA_ABLATION.md  ALLEN_CELL_INVARIANTS_SUMMARY.md  ALLEN_CELL_SPHARM_SYSTEMATIC.md
benchmarks/results/allen_cell/allen_cell_nuclei_beta_ablation/: allen_cell_nuclei_beta_ablation_invariants_hyperparams.json  allen_cell_nuclei_beta_ablation_invariants_scores.json
benchmarks/results/allen_cell/allen_cell_nuclei_cellprofiler_ablation2/: allen_cell_nuclei_cellprofiler_ablation2_invariants_hyperparams.json  allen_cell_nuclei_cellprofiler_ablation2_invariants_scores.json
benchmarks/results/allen_cell/allen_cell_nuclei_cellprofiler_top2/: allen_cell_nuclei_cellprofiler_top2_invariants_scores.json  (+1 more)
benchmarks/results/allen_cell_nuclei/: allen_cell_nuclei_invariants_hyperparams.json  allen_cell_nuclei_invariants_scores.json
benchmarks/results/allen_cell_nuclei_combinations_optimized/: allen_cell_nuclei_combinations_optimized_invariants_hyperparams.json  allen_cell_nuclei_combinations_optimized_invariants_scores.json
benchmarks/results/allen_cell_nuclei_eigen_only_optimized/: allen_cell_nuclei_eigen_only_optimized_invariants_scores.json
benchmarks/results/allen_cell_nuclei_optimized/: allen_cell_nuclei_optimized_invariants_hyperparams.json  allen_cell_nuclei_optimized_invariants_scores.json
benchmarks/results/allen_cell_nuclei_rotated/: allen_cell_nuclei_rotated_invariants_hyperparams.json  allen_cell_nuclei_rotated_invariants_scores.json
benchmarks/results/allen_cell_nuclei_so2_optimized/: allen_cell_nuclei_so2_optimized_invariants_scores.json
benchmarks/results/allen_cell_nuclei_so2_preliminary/: allen_cell_nuclei_so2_preliminary_invariants_hyperparams.json
benchmarks/results/allen_cell_nuclei_so3d3_optimized/: allen_cell_nuclei_so3d3_optimized_invariants_hyperparams.json  allen_cell_nuclei_so3d3_optimized_invariants_scores.json
benchmarks/results/allen_cell_nuclei_spharm_systematic/: allen_cell_nuclei_spharm_systematic_invariants_scores.json
benchmarks/results/vessel3d_64/: vessel3d_64_invariants_hyperparams.json  vessel3d_64_invariants_scores.json
dataset/basic_shapes/additivity_tests/: asymmetric_two_labels.off  box_a_2x2x2.off  box_b_4x4x4.off
dataset/basic_shapes/runtime_tests/: sphere_sub5.off  sphere_sub6.off
dataset/multilabel_test/: f5d35d71_segmentation.ome.tif
docs/: minkowski_tensors.md
examples/: karambola_pykarambola_center_tests.ipynb  label_image_api.ipynb  minkowski_additivity.ipynb  parallel_joblib.ipynb  parallel_processpoolexecutor.ipynb  pykarambola_demo.ipynb
paper/: manuscript.tex  references.bib
paper/notebooks/: benchmark_adrenal3d.ipynb  downloadAlign_adrenal3d.ipynb  requirements.txt  runtime_comparison.ipynb
paper/notebooks/results/: adrenal3d_28_error_summary.csv  adrenal3d_28_karambola.csv  adrenal3d_28_pykarambola.csv  adrenal3d_64_error_summary.csv  adrenal3d_64_karambola.csv  adrenal3d_64_pykarambola.csv  timing_all.csv
pykarambola/: __init__.py  __main__.py  _accel.pyx  api.py  cli.py  eigensystem.py  invariants.py  io_glb.py  io_obj.py  io_off.py  io_poly.py  minkowski.py  output.py  results.py  spherical.py  surface.py  tensor.py  triangulation.py
tests/: conftest.py  test_accel.py  test_api.py  test_box.py  test_invariants.py  test_invariants_m3.py  test_invariants_m4.py  test_invariants_m6.py  test_mesh_quality.py  test_nonconvex.py  test_readers.py  test_wigner3j.py
tests/fixtures/: L_prism_4x3x4_notch2x3x2.poly
(+275 files in other folders)
