[build-system]
requires = ["setuptools>=64", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pykarambola"
version = "0.2.0"
description = "Python implementation of Karambola – Minkowski tensors on 3D triangulated surfaces"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = [
    "minkowski", "tensors", "bioimage", "morphometry",
    "3d-shape-analysis", "mesh", "geometry", "surface-analysis",
    "computational-geometry", "shape-descriptor", "materials-science",
    "minkowski-functionals", "triangulated-surface", "image-analysis",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/Pitt-IshiharaLab/pykarambola"
"Bug Tracker" = "https://github.com/Pitt-IshiharaLab/pykarambola/issues"

[project.optional-dependencies]
dev = ["pytest", "scikit-image"]
accel = ["cython>=3.0"]
glb = ["trimesh"]
notebooks = ["scikit-image", "matplotlib", "seaborn", "pandas", "medmnist"]

[tool.setuptools.packages.find]
include = ["pykarambola*"]
